# macshot

./: .gitignore  LICENSE  README.md  macshot.py  pyproject.toml
docs/: mac-shortcuts-setup.md
